--- a/package.json
+++ b/package.json
@@ -1,3 +1,23 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:11fdbc2628a1911ef265c059ea76adaee9bf42e4c6d91af140b9dced518c2e9e
-size 176
+{
+  "name": "business-management-platform",
+  "private": true,
+  "version": "1.0.0",
+  "description": "A unified platform for business management including CMS, CRM, and Sales modules.",
+  "main": "index.js",
+  "workspaces": [
+    "apps/*",
+    "packages/*",
+    "services/*"
+  ],
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "cms",
+    "crm",
+    "sales",
+    "business-management"
+  ],
+  "author": "",
+  "license": "ISC"
+}
