--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,11 +1,15 @@
-# Dockerfile نهایی و خودکفا برای سرویس‌های بک‌اند (NestJS)
+# Shared Dockerfile for backend services
 
-# --- STAGE 1: Dependencies ---
-# در این مرحله، وابستگی‌ها به صورت امن و ایزوله در داخل کانتینر نصب می‌شوند.
+# 1. Stage: Install dependencies
+# This stage installs all npm dependencies. It's a separate stage to leverage Docker's caching.
+# It only re-runs if the package.json or package-lock.json files change.
 FROM node:18-alpine AS dependencies
+
+# Set the working directory
 WORKDIR /usr/src/app
 
-# کپی کردن تمام فایل‌های package.json برای نصب یکپارچه
+# Copy all package.json and package-lock.json files from the monorepo
+# A wildcard is used for package-lock.json to handle cases where it might not exist initially.
 COPY package.json package-lock.json* ./
 COPY apps/components/package.json ./apps/components/
 COPY apps/stores/package.json ./apps/stores/
@@ -15,42 +19,62 @@ COPY services/auth-service/package.json ./services/auth-service/
 COPY services/crm-service/package.json ./services/crm-service/
 COPY services/sales-service/package.json ./services/sales-service/
 
-# اجرای npm ci برای نصب تمیز و سریع وابستگی‌ها
-RUN npm ci --legacy-peer-deps
+# Explicitly unset any proxy settings that might be inherited from the host environment.
+RUN npm config delete proxy
+RUN npm config delete https-proxy
+# Set the registry to a reliable public mirror to bypass network issues.
+RUN npm config set registry https://registry.npmmirror.com/
 
+# Install dependencies using 'npm install'.
+# --legacy-peer-deps is used to avoid issues with peer dependency conflicts.
+RUN npm install --legacy-peer-deps
 
-# --- STAGE 2: Builder ---
-# در این مرحله، سورس کد با استفاده از وابستگی‌های نصب شده، بیلد می‌شود.
+# 2. Stage: Build the application
+# This stage builds the specific service.
 FROM node:18-alpine AS builder
+
+# Argument to specify which service to build
 ARG SERVICE_NAME
+
 WORKDIR /usr/src/app
 
-# کپی کردن وابستگی‌ها از مرحله قبل
-COPY --from=dependencies /usr/src/app/node_modules ./node_modules
-# کپی کردن تمام سورس کد پروژه
+# Copy the entire monorepo source code first.
 COPY . .
 
-# **تغییر کلیدی:** اجرای مستقیم دستور build با استفاده از npm bin برای پیدا کردن مسیر صحیح.
-# این روش قوی‌تر از مسیردهی مستقیم است و مشکل "not found" را حل می‌کند.
-RUN $(npm bin)/nest build ${SERVICE_NAME}
+# Now, copy the clean, correctly-installed node_modules from the 'dependencies' stage.
+COPY --from=dependencies /usr/src/app/node_modules ./node_modules
 
+# Build the specified service using the direct path to the executable.
+# This is the most reliable method and avoids potential npx/shell path issues.
+RUN /usr/src/app/node_modules/.bin/nest build ${SERVICE_NAME}
 
-# --- STAGE 3: Production Runner ---
-# ساخت ایمیج نهایی که بسیار سبک و امن است.
+# 3. Stage: Production image
+# This is the final, lightweight image that will be run.
 FROM node:18-alpine AS runner
+
+# Argument to specify which service this container is for
 ARG SERVICE_NAME
+
 WORKDIR /usr/src/app
 
-# ایجاد کاربر غیر روت برای افزایش امنیت
+# Create a non-root user and group for security best practices
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+
+# Copy only the necessary production dependencies from the 'dependencies' stage
+COPY --from=dependencies /usr/src/app/node_modules ./node_modules
+# Copy the built application from the 'builder' stage.
+# For a NestJS monorepo, the output is in a subfolder within dist.
+COPY --from=builder /usr/src/app/dist/services/${SERVICE_NAME} ./dist
+
+# Change ownership of the app files to the non-root user
+RUN chown -R appuser:appgroup /usr/src/app
+
+# Switch to the non-root user
 USER appuser
 
-# کپی کردن فقط وابستگی‌های پروداکشن
-COPY --from=dependencies /usr/src/app/node_modules ./node_modules
-# کپی کردن فایل‌های بیلد شده از مرحله builder
-COPY --from=builder /usr/src/app/dist/services/${SERVICE_NAME} ./dist
-# کپی کردن package.json سرویس برای اجرای صحیح
-COPY services/${SERVICE_NAME}/package.json .
-
+# Expose the port the app runs on
 EXPOSE 3000
-CMD ["node", "dist/main"]
+
+# The command to run the application
+# It starts the built service using node.
+CMD ["node", "dist/main.js"]
