--- a/services/crm-service/tsconfig.json
+++ b/services/crm-service/tsconfig.json
@@ -1,3 +1,26 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:f389603c05dec4c5b57ac797bfaa9fa2b33663f88d3bf062bd18632e5d6e84ef
-size 565
+{
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "compilerOptions": {
+    "module": "commonjs",
+    "declaration": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2021",
+    "sourceMap": true,
+    "outDir": "./dist",
+    "baseUrl": "./",
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@app/common/*": ["../../packages/common/src/*"],
+      "@app/common": ["../../packages/common/src"]
+    }
+  }
+}
