--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,10 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    command: node dist/main
+    command: pnpm run start:prod
+    volumes:
+      - ./backend:/usr/src/app
+      - /usr/src/app/node_modules
     ports:
       - "3001:3000"
     environment:
