--- a/apps/web-client/tsconfig.json
+++ b/apps/web-client/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["../../components/*"],
-      "@/stores/*": ["../../stores/*"],
+      "@/components/*": ["../components/*"],
+      "@/stores/*": ["../stores/*"],
       "@/lib/*": ["./lib/*"]
     },
     "lib": [
